# dav-server-rs

./: .gitignore  Cargo.toml  README.CalDAV.md  README.litmus-test.md  README.md  README.tpl  TODO  TODO.md  generate-readme
.github/workflows/: CI.yml  rust.yml
attic/: README.md  actix-web.rs
doc/: APPLE-Finder-hints.md  APPLE-doubleinfo.md  Apache-PUT-with-Content-Range.md
examples/: actix-web.rs  actix.rs  auth.rs  axum.rs  caldav.rs  carddav.rs  hyper.rs  sample-litmus-server.rs  warp.rs
src/: actix.rs  async_stream.rs  asyncstream.rs  body.rs  caldav.rs  carddav.rs  common.rs  conditional.rs  corostream.rs  dav_filters.rs  davhandler.rs  davheaders.rs  davpath.rs  errors.rs  fakels.rs  fs.rs  fspath.rs  handle_caldav.rs  handle_carddav.rs  handle_copymove.rs  handle_delete.rs  handle_gethead.rs  handle_lock.rs  handle_mkcol.rs  handle_options.rs  handle_props.rs  handle_put.rs  headers.rs  lib.rs  localfs.rs  localfs_macos.rs  localfs_windows.rs  ls.rs  makestream.rs  memfs.rs  memls.rs  method_get.rs  method_lock.rs  method_props.rs  method_put.rs  (+11 more)
tests/: caldav_tests.rs  carddav_tests.rs  dav_tests.rs
