[package]
name = "webdav-handler"

# When releasing to crates.io:
# - Update html_root_url in src/lib.rs
# - Update CHANGELOG.md.
# - Run ./generate-readme
# - Create git tag v0.x.y
version = "0.2.0"

readme = "README.md"
description = "handler for the HTTP and Webdav protocols with filesystem backend"
documentation = "https://docs.rs/webdav-handler"
repository = "https://github.com/miquels/webdav-handler-rs"
homepage = "https://github.com/miquels/webdav-handler-rs"
authors = ["Miquel van Smoorenburg <mike@langeraar.net>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["webdav"]
categories = ["web-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
features = ["full"]

[lib]
name = "webdav_handler"
path = "src/lib.rs"

[features]
default = ["handlebars", "localfs", "memfs"]
actix-compat = [ "actix-web" ]
warp-compat = [ "warp", "hyper" ]
all = [ "actix-compat", "warp-compat" ]
localfs = ["libc", "lru", "parking_lot"]
memfs = []

[[example]]
name = "actix"
required-features = [ "actix-compat" ]

[[example]]
name = "warp"
required-features = [ "warp-compat" ]

[dependencies]
bytes = "1.0.1"
futures-util = "0.3.16"
futures-channel = "0.3.16"
handlebars = { version = "4.1.2", optional = true }
headers = "0.3.0"
htmlescape = "0.3.1"
http = "0.2.3"
http-body = "0.4.0"
lazy_static = "1.4.0"
libc = { version = "0.2.0", optional = true }
log = "0.4.0"
lru = { version = "0.6.0", optional = true }
mime_guess = "2.0.0"
parking_lot = { version = "0.11.1", optional = true }
percent-encoding = "2.1.0"
pin-project = "1.0.4"
pin-utils = "0.1.0"
regex = "1.4.0"
tokio = { version = "1.3.0", features = [ "rt-multi-thread", "io-util", "net", "time", "sync" ] }
time = { version = "0.3.2", default-features = false, features = [ "macros", "formatting" ] }
url = "2.2.0"
uuid = { version = "0.8.0", features = ["v4"] }
xml-rs = "0.8.0"
xmltree = "0.10.0"

hyper = {version = "0.14.0", optional = true }
warp = { version = "0.3.0", optional = true }
#actix-web = { version = "3.3.2", optional = true }
actix-web = { version = "4.0.0-beta.6", optional = true }

[dev-dependencies]
clap = "2.33.0"
env_logger = "0.9.0"
hyper = { version = "0.14.0", features = [ "http1", "http2", "server", "stream", "runtime" ] }
tokio = { version = "1.3.0", features = ["full"] }

