[package]
name = "dav-server"
version = "0.9.0"
readme = "README.md"
description = "Rust WebDAV server library. A fork of the webdav-handler crate."
repository = "https://github.com/messense/dav-server-rs"
authors = ["Miquel van Smoorenburg <mike@langeraar.net>", "messense <messense@icloud.com>"]
edition = "2024"
license = "Apache-2.0"
keywords = ["webdav"]
categories = ["web-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
features = ["full"]

[features]
default = ["localfs", "memfs"]
actix-compat = [ "actix-web" ]
warp-compat = [ "warp", "hyper" ]
caldav = [ "icalendar", "chrono" ]
all = [ "actix-compat", "warp-compat", "caldav" ]
localfs = ["libc", "lru", "parking_lot", "reflink-copy"]
memfs = ["libc"]

[[example]]
name = "actix"
required-features = [ "actix-compat" ]

[[example]]
name = "warp"
required-features = [ "warp-compat" ]

[[example]]
name = "caldav"
required-features = [ "caldav" ]

[dependencies]
bytes = "1.0.1"
dyn-clone = "1"
futures-util = "0.3.16"
futures-channel = "0.3.16"
headers = "0.4.0"
htmlescape = "0.3.1"
http = "1.0.0"
http-body = "1.0.0"
http-body-util = "0.1.0"
libc = { version = "0.2.0", optional = true }
log = "0.4.0"
lru = { version = "0.14.0", optional = true }
mime_guess = "2.0.0"
parking_lot = { version = "0.12.0", optional = true }
percent-encoding = "2.1.0"
pin-project-lite = "0.2.16"
regex = "1.4.0"
tokio = { version = "1.3.0", features = [ "rt-multi-thread", "io-util", "net", "time", "sync" ] }
time = { version = "0.3.2", default-features = false, features = [ "macros", "formatting" ] }
url = "2.2.0"
uuid = { version = "1.1.2", features = ["v4"] }
xml-rs = "0.8.0"
xmltree = "0.11.0"

hyper = { version = "1.1.0", optional = true }
warp = { version = "0.3.0", optional = true, default-features = false }
actix-web = { version = "4.0.0-beta.15", optional = true }
reflink-copy = { version = "0.1.14", optional = true }
icalendar = { version = "0.17.1", optional = true }
chrono = { version = "0.4", optional = true }
derive-where = "1.6.0"

[dev-dependencies]
clap = { version = "4.0.0", features = ["derive"] }
env_logger = "0.11.0"
hyper = { version = "1.1.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.2", features = ["tokio"] }
tokio = { version = "1.3.0", features = ["full"] }
axum = { version = "0.8", features = [] }
