[package]
name = "dav-server"
version = "0.12.0"
readme = "README.md"
description = "Rust WebDAV server library. A fork of the webdav-handler crate."
repository = "https://github.com/messense/dav-server-rs"
authors = ["Miquel van Smoorenburg <mike@langeraar.net>", "messense <messense@icloud.com>"]
edition = "2024"
license = "Apache-2.0"
keywords = ["webdav"]
categories = ["web-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
features = ["full"]

[features]
default = ["localfs", "memfs", "proppatch"]
actix-compat = [ "actix-web" ]
warp-compat = [ "warp", "hyper" ]
caldav = [ "icalendar" ]
carddav = [ "calcard" ]
# All web server implementations
all = [ "actix-compat", "warp-compat", "caldav", "carddav" ]
# Filesystems
localfs = ["libc", "lru", "tokio/rt-multi-thread", "parking_lot", "reflink-copy"]
memfs = ["libc"]
# Opt-out features, to improve performance in some cases where some implementations do not need some default features
proppatch = []

[[example]]
name = "actix"
required-features = [ "actix-compat" ]

[[example]]
name = "warp"
required-features = [ "warp-compat" ]

[[example]]
name = "caldav"
required-features = [ "caldav" ]

[[example]]
name = "carddav"
required-features = [ "carddav" ]

[dependencies]
bytes = "1.11.1"
dyn-clone = "1.0.20"
futures-util = { version = "0.3.32", default-features = false, features = ["alloc"] }
futures-channel = "0.3.32"
headers = "0.4.1"
htmlescape = "0.3.1"
http = "1.4.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
libc = { version = "0.2.183", optional = true }
log = "0.4.29"
lru = { version = "0.16.3", optional = true }
mime_guess = "2.0.5"
parking_lot = { version = "0.12.5", optional = true }
percent-encoding = "2.3.2"
pin-project-lite = "0.2.17"
tokio = { version = "1.50.0", features = [ "rt" ] }
chrono = { version = "0.4.44", default-features = false, features = [ "clock" ] }
url = "2.5.8"
uuid = { version = "1.22.0", features = ["v4"] }
xml-rs = "1.0.0"
xmltree = "0.12.0"

hyper = { version = "1.1.0", default-features = false, features = ["server"], optional = true }
warp = { version = "0.3.0", optional = true, default-features = false }
actix-web = { version = "4.13.0", default-features = false, optional = true }
reflink-copy = { version = "0.1.29", optional = true }
icalendar = { version = "0.17.6", optional = true }
calcard = { version = "0.3.2", default-features = false, optional = true }
derive-where = "1.6.0"

[dev-dependencies]
clap = { version = "4.5.60", features = ["derive"] }
env_logger = "0.11.9"
actix-web = { version = "4.13.0", default-features = false, features = ["macros"] }
hyper = { version = "1.8.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
tokio = { version = "1.50.0", features = ["full"] }
axum = { version = "0.8.8", features = [] }